hphp/hack/test/typecheck/constraint_array_index/after/05-error-codes-05.php.exp
ERROR: File "05-error-codes-05.php", line 3, characters 15-17:
Shape access requires a string literal, integer literal, or a class constant (Typing[4051])
