hphp/hack/test/typecheck/constraint_array_index/after/05-error-codes-05.php
<?hh
function foo(shape(...) $s): void {
  $value = $s[1.0];
}
